<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_app_illus"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/qr_main_illus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_containt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/image_app_illus">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cardQrCodeReader"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/card_background"
                    android:elevation="5dp"
                    android:foreground="@drawable/ripple_8"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:adjustViewBounds="true"
                        android:padding="3dp"
                        android:src="@drawable/e_scan"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/qr_reader"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                </LinearLayout>
            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cardQrGenerator"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/card_background"
                    android:elevation="5dp"
                    android:foreground="@drawable/ripple_8"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:adjustViewBounds="true"
                        android:padding="3dp"
                        android:src="@drawable/e_qr"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/qr_generator"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                </LinearLayout>
            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/main_containt">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/card_share"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/card_background"
                    android:elevation="5dp"
                    android:foreground="@drawable/ripple_8"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:adjustViewBounds="true"
                        android:padding="3dp"
                        android:src="@drawable/share"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/share"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                </LinearLayout>
            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/pricacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/card_background"
                    android:elevation="5dp"
                    android:foreground="@drawable/ripple_8"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:adjustViewBounds="true"
                        android:padding="3dp"
                        android:src="@drawable/privacy"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                </LinearLayout>
            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ram_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/banner_container"
        app:layout_constraintTop_toBottomOf="@+id/second_liner">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/your_ram"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/freeRam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00 MB"
                    android:textColor="@color/items"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/ramTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / 00 MB"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">


            <TextView
                android:id="@+id/memory_percantage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="48%"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/apk_progress_bar_gray" />


            <ProgressBar
                android:id="@+id/memory_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="100"
                android:progress="5"
                android:progressDrawable="@drawable/apk_progress_bar_green" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_id" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>